--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,16 @@ body {
   border-radius: 15px;
   border: 3px solid #bebebe;
 }
+
+.flex-data {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 200px;
+  width: 500px;
+}
+
+.flex-me{
+  display: inline-block;
+  width: 225px;
+}
