--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,6 @@ body {
 
 .card {
   width: 500px;
-  height: 800px;
   margin: 15px;
   background-color: #737373;
   border-radius: 15px;
@@ -22,13 +21,28 @@ body {
 
 .flex-data {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
-  height: 200px;
-  width: 500px;
+  width: 95%;
 }
 
 .flex-me{
   display: inline-block;
   width: 225px;
+}
+
+h2, h3 {
+  margin: 15px;
+}
+
+p {
+  margin: 5px;
+}
+.members {
+  overflow-y: scroll;
+  height: 200px;
+}
+
+.members::-webkit-scrollbar { 
+    display: none;
 }
